<resources>
    <string name="app_name">Appointment Management</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_remember_me">Remember me</string>
    <string name="txt_password">Password</string>
    <string name="txt_sjsu_id">SJSU Id</string>
    <string name="txt_login_with_sjsu_id">Login with sjsu id.</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_login">Login</string>
    <string name="txt_home">Home</string>
    <string name="txt_my_appointments">My Appointments</string>
    <string name="txt_full_info">Full Info</string>
    <string name="txt_create_appointment">Click + to create a new appointment.</string>
    <string name="txt_appointment_reason">Appointment Reason</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_time_slot">Time Slot</string>
    <string name="err_appointment_type">Select appointment type to proceed.</string>
    <string name="err_appointment_creation">Failed to book appointment, please try again later.</string>
    <string name="err_user_update">Failed to update profile, please try again later.</string>
    <string name="txt_user_update">Profile updated successfully.</string>
    <string name="txt_appointment_creation">Appointment booked successfully.</string>
    <string name="txt_appointment_history">Appointment History</string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_contact_number">Contact Number</string>
    <string name="txt_address">Address</string>
    <string name="txt_date_of_birth">Date of Birth</string>
    <string name="txt_scheduled_appointments">Scheduled Appointments</string>
    <string name="txt_see_more">See More</string>
    <string name="txt_pending_payments">Pending payments</string>
    <string name="txt_total_amount">Total Amount</string>
    <string name="txt_payment_history">Payment History</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_dot">·</string>
    <string name="txt_no_records_found">No records found</string>
</resources>
