<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.login.LoginFragment">

    <data>

        <variable
            name="showProgress"
            type="Boolean" />

        <variable
            name="viewModel"
            type="com.mitashgaurh.appointmentmanagement.view.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12_dp"
            android:layout_marginTop="@dimen/dimen_24_dp"
            android:layout_marginEnd="@dimen/dimen_12_dp"
            android:layout_marginBottom="@dimen/dimen_8_dp"
            android:padding="@dimen/dimen_8_dp"
            android:text="@string/txt_welcome"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="@dimen/dimen_24_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12_dp"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:layout_marginEnd="@dimen/dimen_12_dp"
            android:layout_marginBottom="@dimen/dimen_8_dp"
            android:paddingStart="@dimen/dimen_8_dp"
            android:paddingEnd="@dimen/dimen_8_dp"
            android:paddingBottom="@dimen/dimen_8_dp"
            android:text="@string/txt_login_with_sjsu_id"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="@dimen/dimen_20_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_id"
            style="@style/AppTheme.TextAppearance.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12_dp"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:layout_marginEnd="@dimen/dimen_12_dp"
            android:layout_marginBottom="@dimen/dimen_8_dp"
            android:paddingStart="@dimen/dimen_8_dp"
            android:paddingEnd="@dimen/dimen_8_dp"
            android:textColorHint="@color/colorAccent"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_sjsu_id"
                android:inputType="number"
                android:text="@={viewModel.studentId}"
                android:textColor="@android:color/secondary_text_light"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            style="@style/AppTheme.TextAppearance.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12_dp"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:layout_marginEnd="@dimen/dimen_12_dp"
            android:layout_marginBottom="@dimen/dimen_8_dp"
            android:paddingStart="@dimen/dimen_8_dp"
            android:paddingEnd="@dimen/dimen_8_dp"
            android:textColorHint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_id"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textColor="@android:color/secondary_text_light"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12_dp"
            android:layout_marginTop="@dimen/dimen_4_dp"
            android:layout_marginEnd="@dimen/dimen_12_dp"
            android:layout_marginBottom="@dimen/dimen_8_dp"
            android:text="@string/txt_remember_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_18_dp"
            android:layout_marginEnd="@dimen/dimen_18_dp"
            android:layout_marginBottom="@dimen/dimen_8_dp"
            android:enabled="@{!showProgress}"
            android:onClick="@{viewModel::onLoginClicked}"
            android:padding="@dimen/dimen_14_dp"
            android:text="@string/txt_login"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_remember_me" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:visibleGone="@{showProgress}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>